// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FilterTopbar /> render should not render delete button when creating new view 1`] = `
<div
  class="component card"
>
  <div
    class="filter-topbar-content card-body"
  >
    <p
      class="subtitle"
    >
      ADVANCED FILTERS
    </p>
    <div>
      ViewFilters
    </div>
    <div
      class="dropdown"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="mr-2 dropdown-toggle btn btn-secondary btn-sm"
        type="button"
      >
        <i
          class="material-icons mr-2"
        >
          add
        </i>
        Add filter
      </button>
      <div
        aria-hidden="true"
        class="dropdown-menu"
        role="menu"
        tabindex="-1"
      >
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Assignee team
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Assignee user
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Channel
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Closed
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Created
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Customer
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Integration
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Language
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Last message
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Last received message
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Snooze
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Status
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Tags
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Updated
        </button>
      </div>
    </div>
  </div>
  <div
    class="card-footer"
  >
    <div
      class="d-flex align-items-center justify-content-between"
    >
      <div
        class="footer"
      >
        <button
          class="wrapper creation medium"
          type="submit"
        >
          Create view
        </button>
        <button
          class="wrapper ml-2 secondary medium"
          type="submit"
        >
          Cancel
        </button>
        <span
          class="updateViewFeedback"
        >
          No changes have been made.
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<FilterTopbar /> render should not render footer when in search mode 1`] = `
<div
  class="component card"
>
  <div
    class="filter-topbar-content card-body"
  >
    <p
      class="subtitle"
    >
      ADVANCED FILTERS
    </p>
    <div>
      ViewFilters
    </div>
    <div
      class="dropdown"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="mr-2 dropdown-toggle btn btn-secondary btn-sm"
        type="button"
      >
        <i
          class="material-icons mr-2"
        >
          add
        </i>
        Add filter
      </button>
      <div
        aria-hidden="true"
        class="dropdown-menu"
        role="menu"
        tabindex="-1"
      >
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Assignee team
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Assignee user
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Channel
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Closed
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Created
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Customer
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Integration
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Language
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Last message
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Last received message
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Snooze
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Status
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Tags
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Updated
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<FilterTopbar /> render should render active view filters 1`] = `
<div
  class="component card"
>
  <div
    class="filter-topbar-content card-body"
  >
    <div
      class="cardActions"
    >
      <button
        class="wrapper secondary medium"
        title="Export all view tickets"
      >
        <span
          class="wrapper"
        >
          <i
            class="material-icons icon isLeft medium"
          >
            file_download
          </i>
          Export tickets
        </span>
      </button>
      <button>
        View Sharing Button
      </button>
    </div>
    <p
      class="subtitle"
    >
      ADVANCED FILTERS
    </p>
    <div>
      ViewFilters
    </div>
    <div
      class="dropdown"
    >
      <button
        aria-expanded="false"
        aria-haspopup="true"
        class="mr-2 dropdown-toggle btn btn-secondary btn-sm"
        type="button"
      >
        <i
          class="material-icons mr-2"
        >
          add
        </i>
        Add filter
      </button>
      <div
        aria-hidden="true"
        class="dropdown-menu"
        role="menu"
        tabindex="-1"
      >
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Assignee team
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Assignee user
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Channel
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Closed
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Created
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Customer
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Integration
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Language
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Last message
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Last received message
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Snooze
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Status
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Tags
        </button>
        <button
          class="dropdown-item"
          role="menuitem"
          tabindex="0"
          type="button"
        >
          Updated
        </button>
      </div>
    </div>
  </div>
  <div
    class="card-footer"
  >
    <div
      class="d-flex align-items-center justify-content-between"
    >
      <div
        class="footer"
      >
        <div
          class="btn-group"
        >
          <div
            class="wrapper"
          >
            <button
              class="wrapper mainAction medium primary medium"
              id="update-view-button"
              type="submit"
            >
              Update view
            </button>
            <button
              class="wrapper toggle medium wrapper medium primary medium"
            >
              <i
                class="material-icons icon"
              >
                arrow_drop_down
              </i>
            </button>
          </div>
          <span
            aria-expanded="false"
            aria-haspopup="true"
            class=""
          >
            <span
              class="sr-only"
            >
              Toggle Dropdown
            </span>
          </span>
          <div
            aria-hidden="true"
            class="dropdown-menu dropdown-menu-right"
            role="menu"
            tabindex="-1"
          >
            <button
              class="dropdown-item"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              Save as new view
            </button>
          </div>
        </div>
        <button
          class="wrapper ml-2 secondary medium"
          type="submit"
        >
          Cancel
        </button>
        <span
          class="updateViewFeedback"
        >
          No changes have been made.
        </span>
      </div>
      <div />
    </div>
  </div>
</div>
`;
